; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_am_map.c_AM_activateNewScale.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_am_map.c_AM_activateNewScale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@m_w = common dso_local global i32 0, align 4
@m_x = common dso_local global i64 0, align 8
@m_h = common dso_local global i32 0, align 4
@m_y = common dso_local global i64 0, align 8
@f_w = common dso_local global i32 0, align 4
@f_h = common dso_local global i32 0, align 4
@m_x2 = common dso_local global i64 0, align 8
@m_y2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AM_activateNewScale() #0 {
  %1 = load i32, i32* @m_w, align 4
  %2 = sdiv i32 %1, 2
  %3 = sext i32 %2 to i64
  %4 = load i64, i64* @m_x, align 8
  %5 = add nsw i64 %4, %3
  store i64 %5, i64* @m_x, align 8
  %6 = load i32, i32* @m_h, align 4
  %7 = sdiv i32 %6, 2
  %8 = sext i32 %7 to i64
  %9 = load i64, i64* @m_y, align 8
  %10 = add nsw i64 %9, %8
  store i64 %10, i64* @m_y, align 8
  %11 = load i32, i32* @f_w, align 4
  %12 = call i32 @FTOM(i32 %11)
  store i32 %12, i32* @m_w, align 4
  %13 = load i32, i32* @f_h, align 4
  %14 = call i32 @FTOM(i32 %13)
  store i32 %14, i32* @m_h, align 4
  %15 = load i32, i32* @m_w, align 4
  %16 = sdiv i32 %15, 2
  %17 = sext i32 %16 to i64
  %18 = load i64, i64* @m_x, align 8
  %19 = sub nsw i64 %18, %17
  store i64 %19, i64* @m_x, align 8
  %20 = load i32, i32* @m_h, align 4
  %21 = sdiv i32 %20, 2
  %22 = sext i32 %21 to i64
  %23 = load i64, i64* @m_y, align 8
  %24 = sub nsw i64 %23, %22
  store i64 %24, i64* @m_y, align 8
  %25 = load i64, i64* @m_x, align 8
  %26 = load i32, i32* @m_w, align 4
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %25, %27
  store i64 %28, i64* @m_x2, align 8
  %29 = load i64, i64* @m_y, align 8
  %30 = load i32, i32* @m_h, align 4
  %31 = sext i32 %30 to i64
  %32 = add nsw i64 %29, %31
  store i64 %32, i64* @m_y2, align 8
  ret void
}

declare dso_local i32 @FTOM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
